[package]
name = "sol-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
log = { version = "0.4" }
env_logger = "0.10"
tokio = { version = "1.25", features = ["full"]}

[build-dependencies]
bindgen = "0.64"
