[package]
name = "sol-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_cbor = { version = "0.11" }
log = { version = "0.4" }
env_logger = "0.10"
tokio = { version = "1.25", features = ["full"]}
redb = { version = "0.13" }
schemafy = "0.6.0"
clap = { version = "4.1", features = [ "derive" ] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }

[build-dependencies]
bindgen = "0.64"
serde_json = "1.0"
schema_resolve = { path = "/home/stano/rust/schema_resolve" }
