[package]
name = "sol-mgrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sol-lib = { path = "../sol-lib" }
bit_field = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_cbor = { version = "0.11" }
log = { version = "0.4" }
env_logger = "0.10"
tokio = { version = "1.25", features = ["full"]}
redb = { version = "0.15" }
clap = { version = "4.1", features = [ "derive" ] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
packet = { version = "0.1" }

[build-dependencies]
bindgen = "0.64"
