[package]
name = "sol-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1", features = [ "derive" ] }
sol-lib = { path = "../sol-lib" }

[[bin]]
name = "sol-hdr"
path = "sol-hdr/main.rs"
