[package]
name = "ptnet-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1", features = [ "derive" ] }
ptnet = { path = "../../ptnet-rs" }

[[bin]]
name = "ptnet-fw-hdr"
path = "ptnet-fw-hdr/main.rs"
